# entw

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: develop.yml
core/: CMakeLists.txt
core/ifc/: IReport.h  IResult.h  ITest.h
core/inc/: Bare.h  CallExpectation.h  EqualityExpectation.h  Expect.h  Report.h  ReportFactory.h  Result.h  Substitute.h  Test.h  TestCase.h  TestRunner.h  WasRun.h
core/src/: Bare.cpp  Expect.cpp  Report.cpp  ReportFactory.cpp  Result.cpp  Test.cpp  TestCase.cpp  TestRunner.cpp  WasRun.cpp
include/: CallExpectation.h  EqualityExpectation.h  Expect.h  IReport.h  ITest.h  Report.h  Result.h  Test.h  TestCase.h  TestRunner.h
test/: BareTestCase.cpp  CMakeLists.txt  ExpectTestCase.h  ReportTestCase.h  ResultTestCase.h  SubstituteTestCase.h  TestCaseTestCase.h  TestRunnerTestCase.h  TestTestCase.h  main.cpp
